2006-10-31 Borut Razem <borut.razem AT siol.net>

	* index.php: ucSim and sdcdb are now avaialble also in WIN32 platforms

2006-10-30 Borut Razem <borut.razem AT siol.net>

	* index.php, previous.php: moved no-so-fresh-news to past news and
	  previous news
	* left_menu.php: use absolute paths instead full URLs

2006-10-23 Borut Razem <borut.razem AT siol.net>

	* index.php: corrected keywords to pass the w3c XHTML 1.0 validation

2006-10-22 Borut Razem <borut.razem AT siol.net>

	* index.php, snap_header.php, links.php, previous.php:
	  added favicon, thanks to Maarten Brock
	* images/sdcc.ico: added

2006-10-18 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: absolute URLs, so that it can be reused in html doc

2006-10-17 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* index.php: updated SDCC OKR link, added keywords (of the manual)

2006-08-12 Borut Razem <borut.razem AT siol.net>

	* snap.php: report failure if 'Error' found

2006-07-31 Borut Razem <borut.razem AT siol.net>

	* index.php: Small Device C Compiler 2.6.0 released

2006-07-24 Borut Razem <borut.razem AT siol.net>

	* snap.php: correct alt tag values for RT and CL icons

2006-07-12 Borut Razem <borut.razem AT siol.net>

	* index.php: sdcc 2.6.0 RC1 announced

2006-07-10 Borut Razem <borut.razem AT siol.net>

	* snap.php: support for i586-mingw32msvc snapshots

2006-07-09 Borut Razem <borut.razem AT siol.net>

	* snap.php, snap_footer.php: added ChangeLog heads

2006-07-08 Borut Razem <borut.razem AT siol.net>

	* snap.php, snap_footer.php: added regression test results
	* images/*: added

2006-05-11 Borut Razem <borut.razem AT siol.net>

	* snap_header.php: fixed bug [1486015] Changelog not visible from the
	  Snapshots webpage. Thanks to Jim Paris.

2006-04-24 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* left_menu.inc: added links to pdf files

2006-04-21 Borut Razem <borut.razem AT siol.net>

	* index.php, left_menu.inc, snap_header.php:
	  CVS replaced with Subversion