@@ -1,3 +1,8 @@
+2007-01-16 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* index.php: added link for webdoc 1445872,
+	  updated www.soudez.be with unfound product
+
 2006-10-31 Borut Razem <borut.razem AT siol.net>
 
 	* index.php: ucSim and sdcdb are now avaialble also in WIN32 platforms
